--- a/cool-games/how to program project/howtocodejs.css
+++ b/cool-games/how to program project/howtocodejs.css
@@ -1,7 +1,6 @@
 body {
-color:blue;
-
-
-
-
+    background-image: url("http://creative-automata.com/wp-content/uploads/2015/03/binary-code-9004-2560x1600.jpg")
+}
+h1 {
+    color: white;
 }
